--- a/views/index.jade
+++ b/views/index.jade
@@ -7,7 +7,7 @@ html
     //link( rel="stylesheet" href="/stylesheets/bulma.css" )
     link(rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.2/semantic.min.css")
     link( rel="stylesheet" href="/stylesheets/font-awesome-min.css" )  
-    script(src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js')
+    script(src='/js/jquery.min.js')
     script(src='/js/modernizr.js')
     script(src='/js/main.js')
 
